Move 'Add rule' button to the center. Adjust size of borders and fix the overflowing, on small screens, of the 'Select' buttons for picking rules.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -608,7 +608,7 @@ textarea {
   content: '\00a0\00a0\00a0\00a0\00a0 ✎';
 }
 .oppia-editable:hover {
-  border: 2px solid #111;
+  border: 1px solid #111;
   opacity: 0.95;
 }
 
